Fix actions/time primer section

--- a/static/primer.html
+++ b/static/primer.html
@@ -10,6 +10,7 @@
                 <router-link class="item" to="setting">Setting Introduction</router-link>
                 <router-link class="item" to="howtoplay">How To Play</router-link>
                 <router-link class="item" to="tests">Types of Tests</router-link>
+                <router-link class="item" to="actions">Actions & Time</router-link>
                 <router-link class="item" to="init">Initiative & Actions</router-link>
                 <router-link class="item" to="pools">Using Pools</router-link>
                 <router-link class="item" to="stats">Character Statistics</router-link>
@@ -369,7 +370,9 @@
                     <li>If both sides tie or fail, either the opponents remain deadlocked or the highest roll or skill wins and succeeds (GM’s choice).</li>
                 </ul>
                 <p>Critical successes trump high rolls on opposed tests. If both sides succeed, but the lower roller gets a critical, they pull an upset victory from the clutches of defeat. If both opponents roll critical successes, the higher roll (or skill if tied) wins with a critical, the loser fails or succeeds but loses.</p>
-                <h3>Actions & Time</h3>
+            </div>
+            <div class="ui tab segment inverted" id="primer-actions">
+                <h2>Actions & Time</h2>
                 <p>Do you have time to leap across the micrograv module and defuse the bomb? Can you get your vacsuit on before the hole in the ship vents all the air? Most of your actions are handled in a free-form manner, with the GM only loosely tracking time. When timing and the order of actions become important, Eclipse Phase uses action turns to measure time in scenes. The type of actions you can make break down into four types — automatic, quick, complex, and task actions.</p>
                 <h3>Action Turns</h3>
                 <p>An action turn represents roughly 3 seconds. During each action turn you may undertake one of the following:</p>
