Fix scrolling, add various links on sheet

--- a/static/sheet.html
+++ b/static/sheet.html
@@ -107,7 +107,7 @@
 	<div class="eight wide column">
 		
 		<sheet-infobox header="Morph">
-			<div class="ui horizontal inverted divider">Basic Info</div>
+			<div class="ui horizontal inverted divider"><a href="#/primer/stats">Basic Info</a></div>
 			<div class="ui horizontal divided inverted centerflow very relaxed large selection list">
 				<div class="item clickedit">
 					<div class="content">
@@ -141,7 +141,7 @@
 				</div>
 			</div> <!-- End basic info -->
 
-			<div class="ui horizontal inverted divider">Pools</div>
+			<div class="ui horizontal inverted divider"><a href="#/primer/pools">Pools</a></div>
 			<div class="ui horizontal divided inverted centerflow very relaxed large selection list">
 				<div class="item clickedit">
 					<div class="content">
@@ -186,7 +186,7 @@
 				</div>
 			</div> <!-- End pools -->
 
-			<div class="ui horizontal inverted divider">Health</div>
+			<div class="ui horizontal inverted divider"><a href="#/primer/stats">Health</a></div>
 			<div class="ui horizontal divided inverted centerflow very large relaxed selection list">
 				<div class="item clickedit">
 					<div class="content">
@@ -242,7 +242,7 @@
 				</tbody>
 			</table>
 
-			<div class="ui horizontal inverted divider">Positive Traits</div>
+			<div class="ui horizontal inverted divider"><a href="#/traits/positive">Positive Traits</a></div>
 			<table class="ui inverted table">
 				<thead>
 					<tr>
@@ -271,7 +271,7 @@
 				</tbody>
 			</table>
 
-			<div class="ui horizontal inverted divider">Negative Traits</div>
+			<div class="ui horizontal inverted divider"><a href="#/traits/negative">Negative Traits</a></div>
 			<table class="ui inverted table">
 				<thead>
 					<tr>
@@ -300,7 +300,7 @@
 				</tbody>
 			</table>
 
-			<div class="ui horizontal inverted divider">Ware</div>
+			<div class="ui horizontal inverted divider"><a href="#/gear/Ware">Ware</a></div>
 			<table class="ui inverted table">
 				<thead>
 					<tr>
@@ -335,7 +335,7 @@
 		</sheet-infobox> <!-- End morph -->
 		
 		<sheet-infobox header="Combat">
-			<div class="ui horizontal inverted divider">Ranged Weapons</div>
+			<div class="ui horizontal inverted divider"><a href="#/gear/Ranged Weapons">Ranged Weapons</a></div>
 			<table class="ui inverted table">
 				<thead>
 					<tr>
@@ -377,7 +377,7 @@
 				</tbody>
 			</table>
 
-			<div class="ui horizontal inverted divider">Melee Weapons</div>
+			<div class="ui horizontal inverted divider"><a href="#/gear/Melee Weapons">Melee Weapons</a></div>
 			<table class="ui inverted table">
 				<thead>
 					<tr>
@@ -413,7 +413,7 @@
 				</tbody>
 			</table>
 
-			<div class="ui horizontal inverted divider">Armor</div>
+			<div class="ui horizontal inverted divider"><a href="#/gear/Armor">Armor</a></div>
 			<table class="ui inverted table">
 				<thead>
 					<tr>
@@ -706,7 +706,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<div class="ui horizontal inverted divider">Psi Sleights</div>
+			<div class="ui horizontal inverted divider"><a href="#/sleights">Psi Sleights</a></div>
 			<table class="ui table inverted">
 				<thead>
 					<tr>
@@ -741,7 +741,7 @@
 		</sheet-infobox>
 		
 		<sheet-infobox header="Bots/Vehicles">
-			<div class="ui horizontal inverted divider">Bots</div>
+			<div class="ui horizontal inverted divider"><a href="#/gear/Tech/Bots">Bots</a></div>
 			<table class="ui celled table inverted">
 				<thead>
 					<tr>
@@ -806,7 +806,7 @@
 				</tbody>
 			</table>
 
-			<div class="ui horizontal inverted divider">Vehicles</div>
+			<div class="ui horizontal inverted divider"><a href="#/gear/Tech/Vehicles">Vehicles</a></div>
 			<table class="ui celled table inverted">
 				<thead>
 					<tr>
@@ -878,7 +878,7 @@
 	
 	<div class="eight wide column">
 		<sheet-infobox header="Ego">
-			<div class="ui horizontal inverted divider">Mental Health</div>
+			<div class="ui horizontal inverted divider"><a href="#/primer/stats">Mental Health</a></div>
 			<div class="ui horizontal divided inverted centerflow large relaxed selection list">
 				<div class="item clickedit">
 					<div class="content">
@@ -924,7 +924,7 @@
 				</div>
 			</div>
 
-			<div class="ui horizontal inverted divider">Aptitudes</div>
+			<div class="ui horizontal inverted divider"><a href="#/primer/stats">Aptitudes</a></div>
 			<table class="ui inverted table">
 				<thead>
 					<tr>
@@ -1006,6 +1006,7 @@
 		</sheet-infobox>
 		
 		<sheet-infobox header="Skills">
+			<div class="ui horizontal inverted divider"><a href="#/chargen/6">Character Skills</a></div>
 			<table class="ui inverted table">
 				<thead>
 					<tr>
@@ -1048,6 +1049,7 @@
 		</sheet-infobox>
 		
 		<sheet-infobox header="Gear">
+			<div class="ui horizontal inverted divider"><a href="#/gear">Character Inventory</a></div>
 			<table class="ui inverted table">
 				<thead>
 					<tr>
@@ -1089,7 +1091,7 @@
 		</sheet-infobox>
 		
 		<sheet-infobox header="Ego Traits">
-			<div class="ui horizontal inverted divider">Positive Traits</div>
+			<div class="ui horizontal inverted divider"><a href="#/traits/positive">Positive Traits</a></div>
 			<table class="ui inverted table">
 				<thead>
 					<tr>
@@ -1118,7 +1120,7 @@
 				</tbody>
 			</table>
 
-			<div class="ui horizontal inverted divider">Negative Traits</div>
+			<div class="ui horizontal inverted divider"><a href="#/traits/negative">Negative Traits</a></div>
 			<table class="ui inverted table">
 				<thead>
 					<tr>
