Add movement link to actions page

--- a/static/sheet.html
+++ b/static/sheet.html
@@ -222,7 +222,7 @@
 				</div>
 			</div>
 
-			<div class="ui horizontal inverted divider">Movement</div>
+			<div class="ui horizontal inverted divider"><a href="#/primer/actions">Movement</a></div>
 			<table class="ui inverted table">
 				<thead>
 					<tr>
