Add 'Used' to clarify what to put in favors areas

--- a/static/sheet.html
+++ b/static/sheet.html
@@ -478,7 +478,7 @@
 						<td class="center aligned selectable"><prop :obj="character.rep_real.x_rep" keyname="value" /></td>
 					</tr>
 					<tr>
-						<th class="center aligned" colspan="7">Favors (Triv/Min/Mod/Maj)</th>
+						<th class="center aligned" colspan="7">Favors Used (Triv/Min/Mod/Maj)</th>
 					</tr>
 					<tr>
 						<td class="center aligned">
@@ -551,7 +551,7 @@
 						<td class="center aligned selectable"><prop :obj="character.rep_fake1.x_rep" keyname="value" /></td>
 					</tr>
 					<tr>
-						<th class="center aligned" colspan="7">Favors (Triv/Min/Mod/Maj)</th>
+						<th class="center aligned" colspan="7">Favors Used (Triv/Min/Mod/Maj)</th>
 					</tr>
 					<tr>
 						<td class="center aligned">
@@ -624,7 +624,7 @@
 						<td class="center aligned selectable"><prop :obj="character.rep_fake2.x_rep" keyname="value" /></td>
 					</tr>
 					<tr>
-						<th class="center aligned" colspan="7">Favors (Triv/Min/Mod/Maj)</th>
+						<th class="center aligned" colspan="7">Favors Used (Triv/Min/Mod/Maj)</th>
 					</tr>
 					<tr>
 						<td class="center aligned">
