--- a/static/sheet.html
+++ b/static/sheet.html
@@ -912,8 +912,8 @@
 						<prop :obj="character" keyname="traumas_taken" />
 					</div>
 				</div>
-				<div class="item clickedit">
-					<div class="content">
+				<div class="item clickedit" @click.stop="character.roll_initiative()">
+					<div class="content" data-tooltip="Will roll your initiative on click">
 						<div class="header">Initiative</div>
 						<prop :obj="character" keyname="initiative" readonly /> (<span v-if="character.initiative_mod > 0">+</span><prop :obj="character" keyname="initiative_mod" />)
 					</div>
