--- a/static/chargen.html
+++ b/static/chargen.html
@@ -74,7 +74,7 @@
           </thead>
           <tbody>
             <tr v-if="skills.length" v-for="skill in skills">
-              <td class="ui single line">{{skill.name}}</td>
+              <td class="ui single line">{{skill.name}}<span v-if="skill.field">: [Field]</span></td>
               <td class="ui single line">{{skill.aptitude}}</td>
               <td class="ui single line">{{skill.type}}</td>
               <td v-html="skill.description"></td>
