--- a/static/chargen.html
+++ b/static/chargen.html
@@ -76,7 +76,7 @@
             <tr v-if="skills.length" v-for="skill in skills">
               <td class="ui single line">{{skill.name}}<span v-if="skill.field">: [Field]</span></td>
               <td class="ui single line">{{skill.aptitude}}</td>
-              <td class="ui single line">{{skill.type}}</td>
+              <td class="ui single line">{{skill_types(skill)}}</td>
               <td v-html="skill.description"></td>
               <td>{{skill.specializations | commalist}}</td>
             </tr>
