--- a/static/sheet.html
+++ b/static/sheet.html
@@ -1367,14 +1367,22 @@
 	<div class="ui modal inverted" id="import-modal">
 		<div class="header">Base64 Character Import</div>
 		<div class="content">
-			<p>Paste your exported character below and use the button to import it over the current character.</p>
+			<p>Either upload a file, or paste your exported character below and use the button to import it over the current character.</p>
 			<p>Note: You will <b>OVERWRITE</b> your current character. Make sure you have a backup!</p>
-		
+			
+			<label for="fileimport">
+				<div class="ui animated fade basic button inverted blue">
+					<div class="visible content">Upload File</div>
+					<div class="hidden content"><i class="upload alternate icon"></i></div>
+				</div>
+			</label>
+			<input type="file" id="fileimport" name="fileimport" accept=".txt" style="display: none;" @input="import_file_change">
+
 			<div class="ui animated fade basic button inverted blue" @click="import_character()">
-				<div class="visible content">Import Character</div>
+				<div class="visible content">Import Text Below</div>
 				<div class="hidden content"><i class="upload alternate icon"></i></div>
 			</div>
-			
+
 			<div class="ui segment">
 				<textarea style="width:100%;height:25rem;" spellcheck="false" id="import-textarea"></textarea>
 			</div>
@@ -1386,11 +1394,16 @@
 		<div class="content">
 			<p>You can import the below code later to re-load your character, or send it to someone else.</p>
 			
+			<div class="ui animated fade basic button inverted blue" @click="download_export()">
+				<div class="visible content">Save to File</div>
+				<div class="hidden content"><i class="download icon"></i></div>
+			</div>
+
 			<div class="ui animated fade basic button inverted blue" @click="copy_export()">
 				<div class="visible content">Copy to Clipboard</div>
 				<div class="hidden content"><i class="clipboard icon"></i></div>
 			</div>
-			
+
 			<div class="ui segment">
 				<textarea style="width:100%;height:25rem;" spellcheck="false" id="export-textarea" :value="base64export"></textarea>
 			</div>
